# appio

./: .dockerignore  .env.example  .gitignore  .plan-config.json  Makefile  PROJECT_PLAN.md  appio.docx  fly.toml  package-lock.json  package.json  pyproject.toml  vercel.json
apps/api/: config.py  dependencies.py  main.py  pyproject.toml  worker.py
apps/api/core/: exceptions.py  logging.py  middleware.py  rate_limit.py  security.py
apps/api/domains/admin/: router.py
apps/api/domains/apps/: router.py  schemas.py  service.py
apps/api/domains/auth/: router.py  schemas.py  service.py
apps/api/domains/billing/: router.py  schemas.py  service.py
apps/api/domains/builds/: router.py  schemas.py  service.py  tasks.py
apps/api/domains/convex/: cli.py  credentials_service.py  crypto.py  management.py  migration_service.py  router.py  schema_parser.py  schemas.py  tasks.py
apps/api/domains/generation/: agent_service.py  cost_tracker.py  critique.py  linter.py  mockup.py  model_router.py  planning.py  rag.py  router.py  schemas.py  screenshot.py  sdk_event_map.py  sdk_hooks.py  sdk_runner.py  service.py
apps/api/domains/templates/: router.py  schemas.py  service.py
apps/api/domains/themes/: router.py  schemas.py  service.py  wcag.py
apps/api/tests/: test_agent_cache.py  test_cors.py  test_exceptions.py  test_generation.py  test_health.py  test_linter.py
apps/api/tests/domains/: test_themes.py
apps/api/tests/fixtures/: theme_eval.json
python/builder/: pyproject.toml
python/builder/spikes/: agent_sdk_hello.py  diff_finder.py  hook_isolate.py  runner_direct.py  runner_no_hooks.py  sdk_runner_test.py  skills_direct.py  skills_test.py  skills_workspace.py  yield_deadlock_test.py
python/builder/src/appio_builder/: __init__.py  agent_tools.py  autofix.py  config.py  convex_scanner.py  fly.py  icon.py  kv.py  local_runner.py  orchestrator.py  preview.py  preview_cleanup.py  r2.py  scanner.py  tasks.py  validation.py  workspace_cleanup.py
python/builder/tests/: test_auth_bridge.py  test_autofix.py  test_convex_scanner.py  test_fly_dispatch.py  test_icon.py  test_kv.py  test_scanner.py  test_unpack_dist.py  test_validation.py
python/db/: alembic.ini  pyproject.toml
python/db/alembic/: env.py
python/db/alembic/versions/: 001_initial_schema.py  002_seed_templates.py  003_autofix_error_tracking.py  004_add_preview_and_public_url.py  005_add_rag_snippets.py  006_add_workspace_persistence.py  007_add_app_templates.py  008_ops_indexes_and_slug_constraints.py  009_user_themes.py  010_convex_oauth_and_publish.py  011_app_convex_credentials.py  012_add_app_messages.py  013_widen_publish_status.py
python/db/src/appio_db/: __init__.py  (+2 more)
(+239 files in other folders)
