[project]
name = "appio-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.19.0",
    "slowapi>=0.1.9",
    "anthropic>=0.42.0",
    "claude-agent-sdk>=0.1.68",
    "firebase-admin>=6.6.0",
    "voyageai>=0.3.7",  # 0.3.x requires Python <3.14; 0.2.x supports 3.14
    "pgvector>=0.3.6",
    "pillow>=10.0.0",
    "stripe>=11.4.0",
    "posthog>=3.5.0",
    "cryptography>=44.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
