[project]
name = "appio-builder"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dramatiq[redis]>=1.17.0",
    "httpx>=0.28.0",
    "boto3>=1.35.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "appio-shared",
    "appio-codegen",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/appio_builder"]
