[project]
name = "appio-db"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.31.0",
    "alembic>=1.14.0",
    "tenacity>=9.0.0",
    "pgvector>=0.3.6",
    "appio-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/appio_db"]
